grosse changement d'architecture au niveau de activite,etape,et liste